Add SQL adaptation and placeholder logic for filter processing